apps/forgejo/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: forgejo
spec:
  replicas: 1
  serviceName: forgejo
  selector:
    matchLabels:
      app.kubernetes.io/instance: forgejo
      app.kubernetes.io/name: forgejo
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: forgejo
        app.kubernetes.io/name: forgejo
    spec:
      containers:
        - name: forgejo
          image: forgejo
          ports:
            - name: http
              containerPort: 3000
            - name: ssh
              containerPort: 2222
          readinessProbe:
            httpGet:
              path: /api/healthz
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: http
            initialDelaySeconds: 60
            timeoutSeconds: 5
          startupProbe:
            httpGet:
              path: /api/healthz
              port: http
            timeoutSeconds: 5
            failureThreshold: 180
          volumeMounts:
            - name: data
              mountPath: /var/lib/gitea
      securityContext:
        fsGroup: 1000
      volumes:
        - name: config
          secret:
            secretName: forgejo-config
        - name: rclone-config
          configMap:
            name: forgejo-rclone
        - name: data
          persistentVolumeClaim:
            claimName: forgejo-data
